Release Notes

* current
  * setting activity for registerDatasetLocation
  * refreshing fairshre table every 15min
  * using group account for group.* with destSE
  * using "User Subscriptions" for user's rules
  * changed the limit to reassign jobs at inactive sites to prio=800
  * sending tobekilled to updateJob for already killed jobs
  * fixed bulk getJob for user jobs
  * changed ppEvt to keep failed event records for ES
  * changed getCriteriaForProdShare for urgent to ignore fairshare
  * added nJobs in getJob
  * removed datri stuff from EP
  * added hasValueInCatchall
  * keep records in SiteData for 48h
  * changed to reassign high prio jobs in activated/starting when sites are inactive
  * changed lastStart to be updated only by managed/user/panda
  * using rucio in getScriptOfflineRunning
  * removed registerDispatchDatasetLocation
  * changed to retry ES merge when lost heartbeat
  * added convertRSE for PRODDISK retirement
  * added updateEventRanges
  * using rucio API instead of DaTRI
  * updating lastStart
  * id in fairshare
  * added taskID to getJob
  * introduced prio limit in shares with throttled
  * changed code=51 to force-kill
  * fixed ppEvent for catchall=None
  * added more debug info to insertDataset
  * added soft flag to reassignTask
  * removed old hint for 10.2.0.4
  * added job cloning stuff
  * added max/avgRSS etc
  * resetting startTime to endTime when starting jobs are killed
  * removed pinning for panda.um
  * changed Setupper not to make redundant rule for panda.um
  * reduced timeout for high prio holding jobs
  * added -info to eventLookupClientEI
  * changed dispatcher to send DDM endpoints
  * added jediTaskID in getEventRanges
  * set file status to failed when consumers are killed
  * improved eventLookupClientEI for 0 matching
  * changed EventPicking to use EI
  * reduced timeout for lost-heartbeat to 2h from 6h
  * using tape replicas at T1
  * added 51 in killJob
  * added shareMgr.py